# Harmony

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
Examples/: CMakeLists.txt
Examples/src/: Common.h
Examples/src/01-Cubes/: CMakeLists.txt  Cubes.cpp  Cubes.frag.glsl  Cubes.glsl  Cubes.vert.glsl
Examples/src/02-Textures/: CMakeLists.txt  Textures.cpp  Textures.frag.glsl  Textures.glsl  Textures.vert.glsl
Examples/src/Common/: ExampleApp.cpp  ExampleApp.h  FileReader.h
Harmony/: CMakeLists.txt
Harmony/src/: Harmony.h
Harmony/src/Backend/DX11/: DX11Buffer.cpp  DX11Buffer.h  DX11Include.h  DX11RendererAPI.cpp  DX11RendererAPI.h  DX11Shader.cpp  DX11Shader.h  DX11Texture.cpp  DX11Texture.h  DX11Util.h
Harmony/src/Backend/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Harmony/src/Harmony/: Base.h  Buffer.cpp  Buffer.h  Framebuffer.cpp  Framebuffer.h  RenderCommand.cpp  RenderCommand.h  RendererAPI.cpp  RendererAPI.h  RendererInfo.h  Shader.cpp  Shader.h  ShaderPipeline.cpp  ShaderPipeline.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
HarmonyAPI/: CMakeLists.txt
HarmonyAPI/src/: HarmonyAPI.h
HarmonyAPI/src/Backend/DX11/: DX11Buffer.cpp  DX11Buffer.h  DX11Include.h  DX11RendererAPI.cpp  DX11RendererAPI.h  DX11Shader.cpp  DX11Shader.h  DX11Texture.cpp  DX11Texture.h  DX11Util.h
HarmonyAPI/src/Backend/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
HarmonyAPI/src/Harmony/: Base.h  Buffer.cpp  Buffer.h  Framebuffer.cpp  Framebuffer.h  RenderCommand.cpp  RenderCommand.h  RendererAPI.cpp  RendererAPI.h  RendererInfo.h  Shader.cpp  Shader.h  ShaderPipeline.cpp  ShaderPipeline.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
HarmonyRenderer/: CMakeLists.txt
HarmonyRenderer/res/Shaders/: SpriteBatch.glsl  Standard.glsl
HarmonyRenderer/src/: HarmonyRenderer.h
HarmonyRenderer/src/Harmony/: Camera.h  Material.h  Math.cpp  Math.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  RendererData.h  SpriteBatch.cpp  SpriteBatch.h
tools/glslang/: CMakeLists.txt  LICENSE.txt  build_info.h
tools/glslang/SPIRV/: CMakeLists.txt  GLSL.ext.ARM.h  GLSL.ext.EXT.h  GLSL.ext.KHR.h  GLSL.ext.NV.h  GLSL.ext.QCOM.h  GLSL.std.450.h  GlslangToSpv.cpp  GlslangToSpv.h  NonSemanticDebugPrintf.h  NonSemanticShaderDebugInfo100.h  SPVRemapper.cpp  SPVRemapper.h  SpvBuilder.cpp  SpvBuilder.h  SpvPostProcess.cpp  SpvTools.cpp  SpvTools.h  disassemble.cpp  doc.cpp  doc.h  hex_float.h  spirv.hpp  spvIR.h
tools/glslang/SPIRV/CInterface/: spirv_c_interface.cpp
tools/glslang/StandAlone/: CMakeLists.txt  DirStackFileIncluder.h  StandAlone.cpp  spirv-remap.cpp
tools/glslang/glslang/: CMakeLists.txt  glsl_intrinsic_header.h  updateGrammar
tools/glslang/glslang/CInterface/: glslang_c_interface.cpp
tools/glslang/glslang/ExtensionHeaders/: GL_EXT_shader_realtime_clock.glsl
tools/glslang/glslang/GenericCodeGen/: CodeGen.cpp  Link.cpp
tools/glslang/glslang/HLSL/: hlslAttributes.cpp  hlslGrammar.cpp  hlslGrammar.h  hlslParseHelper.cpp  hlslParseHelper.h  hlslParseables.cpp  hlslScanContext.cpp  hlslTokens.h  pch.h
tools/glslang/glslang/Include/: BaseTypes.h  Common.h  ConstantUnion.h  InitializeGlobals.h  PoolAlloc.h  ResourceLimits.h  ShHandle.h  SpirvIntrinsics.h  Types.h  arrays.h  glslang_c_interface.h  glslang_c_shader_types.h  intermediate.h
tools/glslang/glslang/MachineIndependent/: Constant.cpp  Initialize.cpp  Initialize.h  IntermTraverse.cpp  Intermediate.cpp  ParseContextBase.cpp  ParseHelper.cpp  ParseHelper.h  PoolAlloc.cpp  Scan.cpp  ShaderLang.cpp  SpirvIntrinsics.cpp  SymbolTable.cpp  SymbolTable.h  Versions.cpp  Versions.h  attribute.cpp  attribute.h  gl_types.h  glslang.y  glslang_tab.cpp  glslang_tab.cpp.h  intermOut.cpp  iomapper.cpp  iomapper.h  limits.cpp  linkValidate.cpp  localintermediate.h  parseConst.cpp  parseVersions.h  propagateNoContraction.cpp  reflection.cpp  reflection.h  span.h
tools/glslang/glslang/MachineIndependent/preprocessor/: Pp.cpp  PpContext.cpp  PpContext.h  PpScanner.cpp  PpTokens.cpp
tools/glslang/glslang/OSDependent/: osinclude.h
tools/glslang/glslang/OSDependent/Unix/: CMakeLists.txt  ossource.cpp
tools/glslang/glslang/OSDependent/Web/: CMakeLists.txt  glslang.after.js  glslang.js.cpp  glslang.pre.js
tools/glslang/glslang/OSDependent/Windows/: CMakeLists.txt  ossource.cpp
tools/glslang/glslang/Public/: ResourceLimits.h  ShaderLang.h  resource_limits_c.h
tools/glslang/glslang/ResourceLimits/: ResourceLimits.cpp  resource_limits_c.cpp
